# move

./: .gitignore  .gitmodules  Cargo.toml
language/move-analyzer/: Cargo.toml  Cargo_previous.toml  changelog.md  design.md  fmt.md  generate_spec.md  package-lock.json  problem.md  todo.md
language/move-analyzer/doc/: design.md
language/move-analyzer/editors/code/: README.md  package-lock.json  package.json
language/move-analyzer/src/: analyzer_handler.rs  ast_debug.rs  call.rs  code_lens.rs  comment_test.txt  completion.rs  completion_move_model.rs  context.rs  context_ori.rs  document_symbol.rs  fmt.rs  fmt2.rs  fmt_test.rs  goto_definition.rs  goto_definition_move_model.rs  hover.rs  hover_move_model.rs  ide_test.rs  inlay_hints.rs  inlay_hitnt.rs  item.rs  item_ori.rs  lib.rs  linter.rs  lsp_fmt.rs  modules.rs  modules_visitor.rs  move_generate_spec.rs  move_generate_spec_chen.rs  move_generate_spec_file.rs  move_generate_spec_sel.rs  move_generate_spec_utils.rs  move_generate_spec_zx.rs  movefmt.rs  multiproject.rs  project.rs  project_context.rs  project_context_ori.rs  project_manager.rs  project_ori.rs  (+19 more)
language/move-analyzer/src/alpha-2024/: Cargo.toml
language/move-analyzer/tests/: linter_tests.rs  test_document_symbols.rs  test_goto_def.rs  test_hover.rs  test_inlay_hint.rs  test_inlay_hints.rs  test_move_model.rs  test_references.rs  test_spec_file.rs  test_spec_sel.rs  testsuite.rs
language/move-vm/runtime/fuzz/: Cargo.toml  fuzz.md
language/move-vm/runtime/fuzz/fuzz_targets/: code_unit.rs
language/tools/move-package/: Cargo.toml
(+17 files in other folders)
