[package]
name = "move-vm-runtime-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = "1.1.7"
move-core-types = { path = "../../../move-core/types", features = ["fuzzing"] }
move-binary-format = { path = "../../../move-binary-format", features = ["fuzzing"] }

[dependencies.move-vm-runtime]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "code_unit"
path = "fuzz_targets/code_unit.rs"
test = false
doc = false
